cabal-version: 3.0
name:
  radix-tree
version:
  0.1
category:
  Data Structures
synopsis:
  Radix tree data structive over short byte-strings
description:
  This module provides a memory-efficient map from
  Data.ByteString.Short keys to arbitrary values implemented as a radix
  tree datastructure. Memory efficiency is achieved by sharing common
  prefixes of all keys.
license:
  Apache-2.0
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>
copyright:
  (c) 2018 Sergey Vinokurov
tested-with:
  GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3

build-type:
  Simple

homepage: https://github.com/sergv/radix-tree

source-repository head
  type: git
  location: https://github.com/sergv/radix-tree.git

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-type-defaults
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Data.RadixTree
    Data.RadixTree.Internal
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.9 && < 5
    , bytestring
    , containers
    , deepseq
    , primitive

test-suite radix-tree-test
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/TestMain.hs
  build-depends:
    , QuickCheck
    , base >= 4.14 && < 5
    , bytestring
    , containers
    , tasty
    , tasty-quickcheck
    , radix-tree
  ghc-options:
    -rtsopts

benchmark radix-tree-bench
  type:
    exitcode-stdio-1.0
  main-is:
    bench/RadixTreeBench.hs
  hs-source-dirs:
    . bench
  build-depends:
    , base >= 4.14 && < 5
    , bytestring
    , containers
    , deepseq
    , hashtables
    , radix-tree
    , tasty-bench
    , text
    , unordered-containers
  ghc-options:
    -rtsopts
